fixes axis position and aligns with plots

--- a/src/styles/trapper.css
+++ b/src/styles/trapper.css
@@ -339,8 +339,6 @@ div.sidebar {
     margin: 0px 10px 0px 10px;
     position: fixed;
     padding: 0px 5px 0px 24px;
-    /* -webkit-transform: translateY(-10px);
-    -ms-transform: translateY(-10px); */
     transform: translateY(-35px);
   }
   
